--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,8 @@
+---
+output: 
+  html_document: 
+    keep_md: yes
+---
 # practicalmachinelearning
 Repository for JHU Coursera Practical Machine Learning
 
