--- a/index.Rmd
+++ b/index.Rmd
@@ -1,8 +1,8 @@
 ---
 output: html_document
 ---
-# practicalmachinelearning
-Repository for JHU Coursera Practical Machine Learning
+# Practical Machine Learning Final Project
+Author:  Felix Ling, Date: September 3, 2016
 
 The main issue in creating a model was that there were a very large number of variables, and thus building the more complex models like Random Forest took prohibitively long and sometimes produced warnings (e.g., "variable 'kurtosis_roll_belt' is not a factor").
 
@@ -22,31 +22,62 @@ library ("ggplot2", lib.loc="../../Documents/R/packages/")
 library ("e1071", lib.loc="../../Documents/R/packages/")
 library ("caret", lib.loc="../../Documents/R/packages/")
 load ("data/PmlSub48Rf.RData")
-```
 
-This is the confusion matrix showing the test set accuracy:
-
-```{r}
-confusionMatrix (Test$classe, PredRf)
-```
-
-Embed plots:
-
-```{r include=FALSE}
-library ("reshape", lib.loc="../../Documents/R/packages/")
+# Subset the training set.
 PmlSub <- Pml[8:dim(Pml)[2]]
 
 # Filter out skewness and kurtosis and other useless variables.
 PmlSub <- PmlSub[,-grep("kurt", colnames (PmlSub))]
 PmlSub <- PmlSub[,-grep("skew", colnames (PmlSub))]
+```
+
+Next, viewing the structure of the dataframe shows that quite a few variables are mostly made up of NAs, meaning that the observation was not available. To keep this report concise, this command only shows the first 12.
+
+```{r}
+summary (PmlSub[1:12])
+```
+
+Refer to the summaries of max_roll_belt, max_pictch_belt, min_roll_belt, for examples with mostly NA's.
+
+Overall, these variables had 19216 NA's out of a total of 19622 observations, meaning that most of the data was not available:
+
+max_roll_belt, max_picth_belt, min_roll_belt, min_pitch_belt, amplitude_pitch_belt, var_total_accel_belt, avg_roll_belt, stddev_roll_belt, var_roll_belt, avg_pitch_belt, stddev_pitch_belt, var_pitch_belt, avg_yaw_belt, var_accel_arm, avg_roll_arm, stddev_roll_arm, var_roll_arm, avg_pitch_arm, stddev_pitch_arm, var_pitch_arm, avg_yaw_arm, stddev_yaw_arm, var_yaw_arm, max_roll_arm, max_picth_arm, max_yaw_arm, min_roll_arm, min_pitch_arm, min_yaw_arm, amplitude_roll_arm, amplitude_pitch_arm, amplitude_yaw_arm, max_roll_dumbbell, max_picth_dumbbell, min_roll_dumbbell, min_pitch_dumbbell, amplitude_roll_dumbbell, amplitude_pitch_dumbbell, var_accel_dumbbell, avg_roll_dumbbell, stddev_roll_dumbbell, var_roll_dumbbell, avg_pitch_dumbbell, stddev_pitch_dumbbell, var_pitch_dumbbell, avg_yaw_dumbbell, stddev_yaw_dumbbell, var_yaw_dumbbell, max_roll_forearm, max_picth_forearm, min_roll_forearm, min_pitch_forearm, amplitude_roll_forearm, amplitude_pitch_forearm, var_accel_forearm, avg_roll_forearm, stddev_roll_forearm, var_roll_forearm, avg_pitch_forearm, stddev_pitch_forearm, var_pitch_forearm, avg_yaw_forearm, stddev_yaw_forearm, var_yaw_forearm
+
+```{r include=FALSE}
+library ("reshape", lib.loc="../../Documents/R/packages/")
 
 # Remove the ones with 19612 NAs.
 PmlSub <- subset( PmlSub, select = -c(max_roll_belt, max_picth_belt, min_roll_belt, min_pitch_belt, amplitude_pitch_belt, var_total_accel_belt, avg_roll_belt, stddev_roll_belt, var_roll_belt, avg_pitch_belt, stddev_pitch_belt, var_pitch_belt, avg_yaw_belt, var_accel_arm, avg_roll_arm, stddev_roll_arm, var_roll_arm, avg_pitch_arm, stddev_pitch_arm, var_pitch_arm, avg_yaw_arm, stddev_yaw_arm, var_yaw_arm, max_roll_arm, max_picth_arm, max_yaw_arm, min_roll_arm, min_pitch_arm, min_yaw_arm, amplitude_roll_arm, amplitude_pitch_arm, amplitude_yaw_arm, max_roll_dumbbell, max_picth_dumbbell, min_roll_dumbbell, min_pitch_dumbbell, amplitude_roll_dumbbell, amplitude_pitch_dumbbell, var_accel_dumbbell, avg_roll_dumbbell, stddev_roll_dumbbell, var_roll_dumbbell, avg_pitch_dumbbell, stddev_pitch_dumbbell, var_pitch_dumbbell, avg_yaw_dumbbell, stddev_yaw_dumbbell, var_yaw_dumbbell, max_roll_forearm, max_picth_forearm, min_roll_forearm, min_pitch_forearm, amplitude_roll_forearm, amplitude_pitch_forearm, var_accel_forearm, avg_roll_forearm, stddev_roll_forearm, var_roll_forearm, avg_pitch_forearm, stddev_pitch_forearm, var_pitch_forearm, avg_yaw_forearm, stddev_yaw_forearm, var_yaw_forearm) )
 
 ```
 
+Upon the remaining variables, it was helpful to perform some exploratory data analysis from here:
+https://www.r-bloggers.com/how-to-use-data-analysis-for-machine-learning-example-part-1/
 
-```{r echo = FALSE}
+The melt chart of the remaining variables looks like this
+
+```{r, warning=FALSE, message=FALSE}
 Melt.PmlSub <- melt (PmlSub)
 ggplot (data = Melt.PmlSub, aes (x=value)) + stat_density() + facet_wrap (~variable, scales = "free")
+```
+
+From this chart, these variables looked the least promising and were also removed:
+
+amplitude_yaw_belt, var_yaw_belt, max_yaw_belt, min_yaw_belt, amplitude_roll_belt, amplitude_yaw_belt, stddev_yaw_belt, var_yaw_belt, max_yaw_dumbbell, min_yaw_dumbbell, amplitude_yaw_dumbbell, gyros_dumbbell_x, max_yaw_forearm, min_yaw_forearm, amplitude_yaw_forearm, gyros_forearm_y, gyros_forearm_z
+
+After that, it was possible to train the random forest model on the remaining 48 variables. This is the code used to subset and train.
+
+```{r, eval=FALSE}
+library ("labeling", lib.loc="../../Documents/R/packages/")
+library ("ggplot2", lib.loc="../../Documents/R/packages/")
+library ("e1071", lib.loc="../../Documents/R/packages/")
+library ("caret", lib.loc="../../Documents/R/packages/")
+
+confusionMatrix (Test$classe, PredRf)
+```
+
+This is the confusion matrix showing the test set accuracy of the random forest model:
+
+```{r}
+confusionMatrix (Test$classe, PredRf)
 ```
